# Epsilon-Quant-Research

./: .gitattributes  .gitignore  CLAUDE.md  README.md  skills-lock.json
polymarket/execution/: .env.example  CLAUDE.md  PLAN.md  README.md  __init__.py  __main__.py  cli.py  config.py  pyproject.toml
polymarket/execution/_kernel/: polymarket_adapter.py  polymarket_clob_client.py  polymarket_sdk_signer.py  state_machine.py  venue.py
polymarket/execution/journal/: __init__.py  events.py  jsonl_writer.py
polymarket/execution/maker/: README.md  __init__.py  cli.py  event_calendar.py  maker_engine.py  negrisk_inventory.py  politics_events.yaml  resolution_handler.py
polymarket/execution/mirror/: __init__.py  clob_http_client.py  clob_signer.py  exit_tracker.py  market_metadata.py  mirror_engine.py  orderbook.py  real_venue_adapter.py
polymarket/execution/risk/: __init__.py  caps.py  daily_loss.py  kill_switch.py  max_open_positions.py  price_deviation.py  types.py
polymarket/execution/scripts/: SMOKE_MAKER.md  SMOKE_REAL.md  dry_run_watcher_signal.py  run_smoke.sh  smoke_watcher.py  verify_position_rebuild.py
polymarket/execution/signal/: __init__.py  classifier.py  dedup.py  types.py
polymarket/execution/tests/: conftest.py  test_cli.py  test_clob_http_client.py  test_config.py  test_journal.py  test_market_metadata.py  test_mirror_engine.py  test_mirror_integration.py  test_orderbook.py  test_real_venue_adapter.py  test_risk.py  test_signal.py  test_sizing.py  (+1 more)
polymarket/research/: .gitignore  CLAUDE.md  README.md  RESEARCH_FINDINGS.md  pyproject.toml
(+1171 files in other folders)
