[project]
name = "polymarket-copy"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.2",
    "gql[requests]>=4.0.0",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
