[project]
name = "polymarket-research"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "duckdb>=1.5.2",
    "gql[requests]>=4.0.0",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "websocket-client>=1.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pytest>=9.0.1",
]
